--- a/css/styles.css
+++ b/css/styles.css
@@ -149,9 +149,13 @@ ul {
 
 .team-card {
   background-color: var(--fonWebsite);
-  height: 380px;
+  min-height: 380px;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-card-header {
@@ -294,6 +298,8 @@ img {
   text-align: center;
 }
 .card-content {
+  display: flex;
+  flex-direction: column;
   gap: 8px;
   padding: 32px 16px 32px 16px;
 }
@@ -324,4 +330,25 @@ img {
 .main-block {
   padding-top: 96px;
   padding-bottom: 120px;
+}
+.social-media {
+  display: flex;
+  gap: 24px;
+  flex-shrink: 0;
+  align-self: flex-end;
+}
+.social-media .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+
+.customers-list {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 24px;
 }
