--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,8 @@ ul {
   max-width: 264px;
 }
 .footer {
+  display: flex;
+  justify-content: flex-start;
   background-color: var(--colorNavyBlue);
   padding: 100px 0;
 }
@@ -251,6 +253,10 @@ img {
   height: 600px;
   padding: 188px 0;
   background-color: var(--colorNavyBlue);
+  background-image: url(../images/index/people-office.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .section-feature {
   width: calc((100% - 72px) / 4);
@@ -356,9 +362,30 @@ img {
   padding-bottom: 120px;
 }
 .team-customers {
-  padding: 16px 32px;
-  border-radius: 4px;
-  border: 1px solid var(--lightslate, #8e8f99);
+  display: flex;
   width: 168px;
   height: 88px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid var(--lightslate, #8e8f99);
+}
+.icon-solution {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  background: var(--cloud, #f4f4fd);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+.media-link {
+  display: flex;
+  gap: 8px;
+}
+.social-media {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
