--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,17 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--colorNavyBlue);
-  padding: 24px 0;
-  display: block;
+  color: var(--colorNavyBlue); /*
+  padding: 24px 0;*/
+  padding-top: 24px;
+  display: flex;
+  flex-direction: column;
 }
 .header-nav-list:hover,
 .header-nav-list:focus {
   color: #404bbf;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contacts {
   font-style: normal;
@@ -57,6 +61,8 @@ ul {
 .header-contacts-list:hover,
 .header-contacts-list:focus {
   color: #404bbf;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -81,7 +87,7 @@ ul {
   border-radius: 4px;
   margin: 0 auto;
 }
-.button-list-text {
+.portfolio-filters {
   font-family: "Roboto", sans-serif;
   background-color: var(--backgroundButton);
   font-style: normal;
@@ -95,13 +101,23 @@ ul {
   border-radius: 4px;
   padding: 12px 24px;
 }
-.button-list-text:hover,
-.button-list-text:focus,
+.portfolio-filters:hover,
+.portfolio-filters:focus {
+  background-color: #404bbf;
+  color: var(--fonWebsite);
+  border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .order-button:hover,
 .order-button:focus {
   background-color: #404bbf;
   color: var(--fonWebsite);
   border: 1px solid transparent;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .solutions-section {
@@ -182,8 +198,6 @@ ul {
   max-width: 264px;
 }
 .footer {
-  display: flex;
-  justify-content: flex-start;
   background-color: var(--colorNavyBlue);
   padding: 100px 0;
 }
@@ -253,7 +267,8 @@ img {
   height: 600px;
   padding: 188px 0;
   background-color: var(--colorNavyBlue);
-  background-image: url(../images/index/people-office.png);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), lightgray),
+    url(../images/index/people-office.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -325,7 +340,16 @@ img {
   row-gap: 48px;
 }
 .portfolio-cards {
-  width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3); /*
+  position: relative;
+  overflow: hidden;*/
+}
+.portfolio-cards:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-name {
   padding: 32px 16px;
@@ -380,12 +404,95 @@ img {
   align-items: center;
   margin-bottom: 8px;
 }
-.media-link {
+.footer-social-media {
   display: flex;
-  gap: 8px;
-}
-.social-media {
-  display: flex;
-  flex-direction: column;
   gap: 16px;
+  flex-shrink: 0;
+  align-self: flex-end;
+}
+.footer-social-media .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.footer-container {
+  display: flex;
+  gap: 120px;
+}
+.footer-social-media-text {
+  margin-bottom: 16px;
+  font-size: 16px;
+  font-family: Roboto;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  color: #ffffff;
+}
+.footer-social-media .link:hover,
+.footer-social-media .link:focus {
+  background-color: #31d0aa;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-nav-list::after {
+  min-width: 48px;
+  height: 4px;
+  margin-top: 20px;
+  border-radius: 2px;
+  content: "";
+}
+.header-nav-list:hover::after {
+  margin-top: 20px;
+  border-radius: 2px;
+  background-color: #404bbf;
+  content: "";
+} /*
+.card-overlay {
+  padding: 8px;
+  background-color: #3f51b5;
+  color: #fff;
+  font-family: sans-serif;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms ease-in-out;
+}
+.portfolio-cards:hover .card-overlay {
+  transform: translateY(0);
+}*/
+
+.card-image {
+  position: relative;
+  overflow: hidden;
+}
+.card-overlay {
+  padding: 8px;
+  background-color: #4d5ae5;
+  color: #fff;
+  font-family: sans-serif;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms ease-in-out;
+}
+.card-image:hover .card-overlay {
+  transform: translateY(0);
+}
+.card-overlay-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  font-family: Roboto;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  padding: 40px 32px 164px 32px;
 }
