--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--colorNavyBlue); /*
-  padding: 24px 0;*/
+  color: var(--colorNavyBlue);
   padding-top: 24px;
   display: flex;
   flex-direction: column;
@@ -340,9 +339,7 @@ img {
   row-gap: 48px;
 }
 .portfolio-cards {
-  width: calc((100% - 48px) / 3); /*
-  position: relative;
-  overflow: hidden;*/
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-cards:hover {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -450,23 +447,7 @@ img {
   border-radius: 2px;
   background-color: #404bbf;
   content: "";
-} /*
-.card-overlay {
-  padding: 8px;
-  background-color: #3f51b5;
-  color: #fff;
-  font-family: sans-serif;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
 }
-.portfolio-cards:hover .card-overlay {
-  transform: translateY(0);
-}*/
 
 .card-image {
   position: relative;
@@ -495,4 +476,23 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   padding: 40px 32px 164px 32px;
+}
+
+/*modal*/
+.backdrop {
+  width: 100%;
+  height: 100%;
+}
+
+.modal {
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+.close-button {
+  width: 24px;
+  height: 24px;
 }
