--- a/css/styles.css
+++ b/css/styles.css
@@ -478,10 +478,12 @@ img {
   padding: 40px 32px 164px 32px;
 }
 
-/*modal*/
 .backdrop {
   width: 100%;
   height: 100%;
+  visibility: hidden;
+  opacity: visible;
+  pointer-events: visible;
 }
 
 .modal {
