--- a/css/styles.css
+++ b/css/styles.css
@@ -494,7 +494,6 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 }
-.close-button {
-  width: 24px;
-  height: 24px;
+
+.modal-icon {
 }
