--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ img {
   height: 600px;
   padding: 188px 0;
   background-color: var(--colorNavyBlue);
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), lightgray),
+  background-image: linear-gradient(#2e2f42b2, rgba(46, 47, 66, 0.7)),
     url(../images/index/people-office.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -479,21 +479,42 @@ img {
 }
 
 .backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
   width: 100%;
   height: 100%;
-  visibility: hidden;
-  opacity: visible;
-  pointer-events: visible;
+  background-color: #2e2f4266;
 }
-
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
   width: 408px;
   height: 584px;
   border-radius: 4px;
-  background: #fcfcfc;
+  background-color: #fcfcfc;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 }
-
+.modal-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  background-color: #e7e9fc;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: #e7e9fc;
+}
 .modal-icon {
+  stroke: #2e2f42;
+
+  color: #2e2f42;
 }
