--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --logoAndButtonText: #4d5ae5;
   --backgroundButton: #f4f4fd;
   --contactColor: #434455;
+  --customersBorderColor: #8e8f99;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -30,21 +31,36 @@ ul {
 }
 
 .header-nav-list {
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--colorNavyBlue);
-  padding-top: 24px;
+  padding: 24px 0;
   display: flex;
   flex-direction: column;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .header-nav-list:hover,
 .header-nav-list:focus {
   color: #404bbf;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.header-nav-list.actual-page::after {
+  content: "";
+  position: absolute;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+}
+
 .header-contacts {
   font-style: normal;
   color: var(--contaktColor);
@@ -85,6 +101,7 @@ ul {
   border: none;
   border-radius: 4px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-filters {
   font-family: "Roboto", sans-serif;
@@ -383,14 +400,26 @@ img {
   padding-bottom: 120px;
 }
 .team-customers {
-  display: flex;
-  width: 168px;
+  width: calc((100% - 120px) / 6);
   height: 88px;
+}
+.customers-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  border: 1px solid var(--lightslate, #8e8f99);
+  border: 1px solid var(--customersBorderColor);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.customers-link:hover,
+.customers-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
 .icon-solution {
   width: 264px;
   height: 112px;
@@ -435,19 +464,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-nav-list::after {
-  min-width: 48px;
-  height: 4px;
-  margin-top: 20px;
-  border-radius: 2px;
-  content: "";
-}
-.header-nav-list:hover::after {
-  margin-top: 20px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: "";
-}
 
 .card-image {
   position: relative;
@@ -486,6 +502,8 @@ img {
   width: 100%;
   height: 100%;
   background-color: #2e2f4266;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -498,23 +516,39 @@ img {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   background-color: #fcfcfc;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button {
   position: absolute;
   top: 24px;
   right: 24px;
   background-color: #e7e9fc;
-  border-radius: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #e7e9fc;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  cursor: pointer;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button:hover,
+.modal-button:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
 }
 .modal-icon {
   stroke: #2e2f42;
-
   color: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
