--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--colorNavyBlue);
+  color: #404bbf;
   padding: 24px 0;
   display: flex;
   flex-direction: column;
@@ -180,6 +180,8 @@ ul {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+.list-team {
+}
 
 .team-card {
   background-color: var(--fonWebsite);
@@ -283,8 +285,12 @@ img {
   height: 600px;
   padding: 188px 0;
   background-color: var(--colorNavyBlue);
-  background-image: linear-gradient(#2e2f42b2, rgba(46, 47, 66, 0.7)),
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/index/people-office.png);
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -299,6 +305,8 @@ img {
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .what-section {
   padding-bottom: 120px;
@@ -376,6 +384,7 @@ img {
 }
 .social-media {
   display: flex;
+  justify-content: center;
   gap: 24px;
   flex-shrink: 0;
   align-self: flex-end;
@@ -409,6 +418,7 @@ img {
   height: 100%;
   justify-content: center;
   align-items: center;
+  color: var(--customersBorderColor);
   border-radius: 4px;
   border: 1px solid var(--customersBorderColor);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -430,6 +440,10 @@ img {
   align-items: center;
   margin-bottom: 8px;
 }
+.icon {
+  fill: var(--backgroundButton);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .footer-social-media {
   display: flex;
   gap: 16px;
@@ -445,9 +459,16 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
 }
+.social-media .link:hover,
+.social-media .link:focus {
+  background-color: #404bbf;
+}
+
 .footer-container {
   display: flex;
   gap: 120px;
+  align-items: baseline;
+  margin-right: 120px;
 }
 .footer-social-media-text {
   margin-bottom: 16px;
@@ -539,6 +560,8 @@ img {
   padding: 0;
   cursor: pointer;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
