--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ ul {
   letter-spacing: 0.02em;
   color: var(--contactColor);
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contacts-list:hover,
 .header-contacts-list:focus {
@@ -508,6 +509,7 @@ img {
   position: relative;
   overflow: hidden;
 }
+
 .card-overlay {
   padding: 8px;
   background-color: #4d5ae5;
