--- a/css/styles.css
+++ b/css/styles.css
@@ -384,8 +384,6 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-cards:hover {
-  /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);*/
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -458,7 +456,8 @@ img {
   margin-bottom: 8px;
 }
 .icon {
-  fill: var(--backgroundButton);
+  fill: currentColor;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-media {
@@ -484,8 +483,10 @@ img {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+
   align-items: baseline;
+}
+.footer-solutions {
   margin-right: 120px;
 }
 
