--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,7 @@ img {
   flex-direction: row;
   gap: 24px;
 }
+
 .index-card-header {
   font-weight: 500;
   font-size: 20px;
@@ -457,6 +458,7 @@ img {
 }
 .icon {
   fill: currentColor;
+  fill: var(--backgroundButton);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
