--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding: 32px 16px 32px 16px;
+  padding: 32px 0;
 }
 
 .filters-container {
@@ -374,11 +374,11 @@ img {
 .portfolio-link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0%);
 }
 .portfolio-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
 }
 .portfolio-cards {
   width: calc((100% - 48px) / 3);
@@ -402,7 +402,8 @@ img {
   justify-content: center;
   gap: 24px;
   flex-shrink: 0;
-  align-self: flex-end;
+
+  align-items: center;
 }
 .social-media .link {
   display: flex;
