--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/index/people-office.png);
+    url(../images/index/people-office.jpg);
 
   max-width: 1440px;
   background-repeat: no-repeat;
@@ -459,7 +459,6 @@ img {
 }
 .icon {
   fill: currentColor;
-  fill: var(--backgroundButton);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
