--- a/css/styles.css
+++ b/css/styles.css
@@ -462,6 +462,10 @@ img {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.icon-our {
+  fill:var(--backgroundButton)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .footer-social-media {
   display: flex;
   gap: 16px;
@@ -535,7 +539,8 @@ img {
   font-family: Roboto;
   line-height: 24px;
   letter-spacing: 0.32px;
-  padding: 40px 32px 164px 32px;
+ 
+  padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
