--- a/css/styles.css
+++ b/css/styles.css
@@ -463,7 +463,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-our {
-  fill:var(--backgroundButton)
+  fill: var(--backgroundButton);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-media {
@@ -539,7 +539,7 @@ img {
   font-family: Roboto;
   line-height: 24px;
   letter-spacing: 0.32px;
- 
+
   padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
